# smart-rag

./: .gitignore  LICENSE  README.md  ROADMAP.md  SETUP_GUIDE.html  pyproject.toml
scripts/: benchmark.py  make_example.py  smart_rag_doctor.py  smart_rag_fetch_model.py
smart_rag/: README.md  __init__.py  api.py  bench.py  cli.py  compare.py  gui.py  mcp_server.py  plugin.py  requirements.txt
smart_rag/adapters/: __init__.py  automotive_std.py  autosar.py  base.py  binary.py  callgraph.py  chip_std.py  code.py  codegraph.py  config.py  docs.py  logs.py  openapi.py  tabular.py
smart_rag/collectors/: __init__.py  binary_hint.py  fs.py  index.py  ssh.py
smart_rag/core/: answer.py  db.py  embed.py  entity.py  fact.py  intent.py  plan.py  profile.py  prose_index.py  relation.py  retrieve.py  router.py  tabular_emit.py  value_decode.py
smart_rag/tests/: regression.py  run_all.py  test_adapters.py  test_adversarial.py  test_collectors.py  test_lifecycle.py  test_plugin.py
