[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-rag"
version = "0.1.0"
description = "Fact-distillation retrieval: dedup + structure-preserving ingestion, hybrid retrieval, honest abstention, cited answers. Works on tables, logs, code, docs."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Sujay Bodke" }]
keywords = ["rag", "retrieval", "embeddings", "facts", "distillation", "toon", "logs"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "numpy>=1.24.0",
    "openpyxl>=3.1.0",
]

[project.optional-dependencies]
# Semantic (hybrid) retrieval. Without these, Smart RAG runs keyword-only (still
# abstains + cites). Pins chosen for prebuilt cp313 wheels (no compiler needed).
semantic = [
    "sentence-transformers>=3.0.0,<6.0.0",
    "transformers>=4.41.0,<4.57.0",
    "tokenizers>=0.20.0",
]
docs = ["pymupdf>=1.24.0", "python-docx>=1.1.0"]
formats = ["pyyaml>=6.0", "pyarrow>=14.0"]   # YAML/OpenAPI, Parquet
agent = ["mcp>=1.0.0", "paramiko>=3.0"]       # MCP server, SSH collector
bench = ["tiktoken>=0.5.0"]
all = [
    "sentence-transformers>=3.0.0,<6.0.0",
    "transformers>=4.41.0,<4.57.0",
    "tokenizers>=0.20.0",
    "pymupdf>=1.24.0",
    "python-docx>=1.1.0",
    "pyyaml>=6.0",
    "pyarrow>=14.0",
    "mcp>=1.0.0",
    "paramiko>=3.0",
    "tiktoken>=0.5.0",
]

[project.scripts]
smart-rag = "smart_rag.cli:main"

[tool.setuptools.packages.find]
include = ["smart_rag*"]
